--- a/jupo-webui/src/styles.styl
+++ b/jupo-webui/src/styles.styl
@@ -1,3 +1,5 @@
+// SPDX-FileCopyrightText: © 2019 Oberverwaltungsgericht Rheinland-Pfalz <poststelle@ovg.jm.rlp.de>, Reiner Bamberger <4329883+reinerBa@users.noreply.github.com>
+// SPDX-License-Identifier: EUPL-1.2
 // start: intermediate progress bar
 .jp-progress-line, .jp-progress-line:before
     margin 0
